# Agent_ads

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG_REVIEW.md  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  RESUME_CODE.md  ROADMAP_IMPROVEMENTS.md  _diag_fbpage.py  _diag_fbpage2.py  _diag_fbpage3.py  docker-compose.yml  main.py  pyproject.toml  review.md
.github/workflows/: ci.yml
AdMind-Vault/agent_ads/: 00 - 🏠 AdMind AI (Accueil).md  01 - Vue d'ensemble.md  02 - Vision produit & Personas.md  03 - Stack technique.md  04 - Architecture.md  05 - Backend.md  06 - Frontend.md  07 - Agent IA.md  08 - Base de données.md  09 - Glossaire.md  10 - API Routes.md  11 - Système de design.md  12 - Contraintes critiques.md  13 - Commandes & démarrage.md  14 - Nouveautés & Évolutions ads_v2.md  README — Comment utiliser ce vault.md
AdMind-Vault/agent_ads/.obsidian/: graph.json  (+1 more)
backend/: agent.py  auth.py  config.py  dashboard.py  db.py  facebook_sync.py  meta_pages.py  meta_tools.py  metrics.py  notifications.py  ratelimit.py  schemas.py
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
supabase/migrations/: 0001_core_schema.sql  0002_fb_cache.sql  0003_campaign_audit.sql  0004_campaign_created_time.sql  0004_scheduled_posts.sql  0005_token_status.sql  0006_refresh_tokens.sql  0007_notifications.sql  0008_users_profile_columns.sql
tests/: conftest.py  test_auth.py  test_campaigns.py  test_facebook_sync.py  test_metrics.py  test_notifications.py  test_ratelimit.py
(+45 files in other folders)
