[project]
name = "agent-ads"
version = "0.1.0"
description = "Meta Ads conversational agent (LangChain + LangGraph + Supabase + FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "supabase>=2.7",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "facebook-business>=20.0",
    "bcrypt>=4.2",
    "pyjwt>=2.9",
    "pydantic[email]>=2.9",
    "python-multipart>=0.0.9",
]
